--- a/index.html
+++ b/index.html
@@ -10,26 +10,49 @@
   <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
 </head>
 <body>
-  <!-- Site header start -->
-  <header class="site-header">
 
-  </header>
-  <!-- Site header finish -->
+    <!-- Site main start -->
+    <main class="site-main">
+      <!-- Hero section start -->
+      <section class="build">
+        <div class="container">
+          <div class="build__box">
+            <div class="build__themebox">
+              <h2 class="build__theme">Build & manage distributed teams like no one else.</h2>
+            </div>
+            <ul class="build__list">
+              <li class="build__item">
+                <div class="build__itembox">
+                  <h3 class="build__minitheme">Experienced Individuals</h3>
+                <p class="build__minitext">
+                  Our network is made up of highly experienced professionals who are passionate about what they do.
+                </p>
+                </div>
+                
+              </li>
+              <li class="build__item">
+                <div class="build__itembox">
+                  <h3 class="build__minitheme">Easy to Implement</h3>
+                <p class="build__minitext">
+                  Our processes have been refined over years of implementation meaning our teams always deliver.
+                </p>
+                </div>
+              </li>
+              <li class="build__item">
+                <div class="build__itembox">
+                  <h3 class="build__minitheme">Enhanced Productivity</h3>
+                <p class="build__minitext">
+                  Our customized platform with in-built analytics helps you manage your distributed teams.
+                </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- Hero section finish -->
+    </main>
+    <!-- Site main finish -->
 
-  <!-- Site main start -->
-  <main class="site-main">
-    <!-- Hero section start -->
-    <section class="hero">
-      
-    </section>
-    <!-- Hero section finish -->
-  </main>
-  <!-- Site main finish -->
-
-  <!-- Site footer start -->
-  <footer class="site-footer">
-
-  </footer>
-  <!-- Site footer finish -->
 </body>
 </html>
